fix: error with text not wrapping

--- a/1_pre-entrega/styles/common.css
+++ b/1_pre-entrega/styles/common.css
@@ -10,7 +10,7 @@ body {
 }
 
 main {
-  width: 100%;
+  /* width: 100%; */
 }
 
 /* Font styles */
@@ -71,7 +71,7 @@ h1, h2, h3, h4, h5, h6, a, p, span {
 
 .page {
   background-color: #0D0D0D;
-  height: 100vh;
+  min-height: 100vh;
   overflow-x: hidden;
 }
 
